--- a/temalar/sosero/assets/css/sosero.css
+++ b/temalar/sosero/assets/css/sosero.css
@@ -56,6 +56,7 @@ html:not(.intro){
   min-width:100%;
   min-height:100%;
   display: block;
+  object-fit: cover;
 }
 /*****/
 .sosero{
@@ -117,14 +118,50 @@ html:not(.intro){
   margin:0;
 }
 .product-card{
-  flex: 0 0 200px;
+  display:flex !important;
   padding: 20px;
+  flex-wrap: wrap;
+  width:100%;
+  max-height: 400px;
+}
+
+.product-card .product-img{
+  width:100%;
+}
+.product-card .product-img img{
+  min-width: 100%;
+  min-height: 100%;
+  object-fit: cover;
+}
+.product-card .product-info{
+  background-color: green;
+  color:#fff;
+  padding:10px;
+  width:100%;
+}
+.product-card .product-imgx{
+  background: linear-gradient(to right bottom, rgba(255, 255, 255, 0.0) 50%, green 50%);
+  height: 50px;
+  width: 100%;
+  margin-top: -50px;
+}
+.product-card .product-info p{
+  margin:0;
+  font-size:16px;
+  color:#fff;
+}
+.product-card .product-info h2{
+  margin:0;
+  font-size:24px;
+  font-weight: bold;
+  color:#fff;
 }
 
 
 
 
 /* Slider */
+
 .slick-slider
 {
     position: relative;
