--- a/_includes/sosero/menu.html
+++ b/_includes/sosero/menu.html
@@ -4,6 +4,7 @@
     <label for="menü-ana">•••</label>
     <label for="menü-ana-çapraz">✕</label>
     <ul data-menü="dikey sağ-kaval" data-gnl="solda" data-kçk="sağda">
+      <li data-gnl="1 1p sağda" data-kçk="gizle"><label for="menü-ana-çapraz">✕</label></li>
       <li><a href="index02.html"><img src="/temalar/sosero/assets/img/menu/urunler.svg" alt=""><span>Ürünler</span></a></li>
       <li><a href="index03.html"><img src="/temalar/sosero/assets/img/menu/yemektarifleri.svg" alt=""><span>Yemek Tarifleri</span></a></li>
       <li><a href="index04.html"><img src="/temalar/sosero/assets/img/menu/uretimtesisleri.svg" alt=""><span>Üretim Tesisleri</span></a></li>
