--- a/temalar/sosero/assets/css/sosero.css
+++ b/temalar/sosero/assets/css/sosero.css
@@ -21,7 +21,7 @@ html:not(.intro){
 }
 [data-menü~="sağ-kaval"] > li a{
   position: relative;
-  padding:10px;
+  padding:10px 20px;
   display:flex;
   justify-content: center;
 }
