--- a/_layouts/sosero/urunler.html
+++ b/_layouts/sosero/urunler.html
@@ -7,7 +7,7 @@
   <div data-gnl="1 1p" data-kçk="sığdır">
     {% include sosero/menu.html %}
     <div class="main" data-gnl="1g 1nc üstte ortada sığdır" data-kçk="">
-      <header data-gnl="23 24p soldan-1 24p-aralık">
+      <header data-gnl="23 24p soldan-1 24p-aralık üstte" style="height:30vh;">
         <a  data-gnl="1 3p" data-kçk="0" href="#"><img src="/temalar/sosero/assets/img/sosero.png" alt="SOSERO"></a>
         <input id="menü-ana-çapraz" checked="" name="ana-menü" data-kapaç="sağda çaprazlama" type="radio">
         <label for="menü-ana" data-gnl="0 sağdan-1 24p">•••</label>
