--- a/_layouts/sosero/urunler.html
+++ b/_layouts/sosero/urunler.html
@@ -6,14 +6,18 @@
 <body data-gnl="sütun sığdır">
   <div data-gnl="1 1p" data-kçk="sığdır">
     {% include sosero/menu.html %}
-    <div class="main" data-gnl="1g 1nc üstte ortada sığdır" data-kçk="">
-      <header data-gnl="23 24p soldan-1 24p-aralık üstte" style="height:30vh;">
+    <div class="main" data-gnl="1g 1nc ortada sığdır">
+      <header data-gnl="23 24p soldan-1 24p-aralık üstte">
         <a  data-gnl="1 3p" data-kçk="0" href="#"><img src="/temalar/sosero/assets/img/sosero.png" alt="SOSERO"></a>
         <input id="menü-ana-çapraz" checked="" name="ana-menü" data-kapaç="sağda çaprazlama" type="radio">
         <label for="menü-ana" data-gnl="0 sağdan-1 24p">•••</label>
         <label for="menü-ana-çapraz" data-gnl="0 sağdan-1 24p">///</label>
       </header>
-      {{ content }}
+      <div data-gnl="23 24p soldan-1 24p-aralık ortada göbekte">
+        <div data-gnl="1 1p dürmeden" style="margin-left:-40px;/* overflow-x:auto;-webkit-overflow-scrolling: touch; */">
+          {{ content }}
+        </div>
+      </div>
     </div>
     <footer data-gnl="0 soldan-1 24p-aralık" style="position:absolute; bottom:0; z-index:999;">
       {% include sosero/footer.html %}
