--- a/_layouts/sosero/paketler.html
+++ b/_layouts/sosero/paketler.html
@@ -11,9 +11,13 @@
         <a  data-gnl="1 3p" data-kçk="0" href="#"><img src="/temalar/sosero/assets/img/sosero.png" alt="SOSERO"></a>
         <input id="menü-ana-çapraz" checked="" name="ana-menü" data-kapaç="sağda çaprazlama" type="radio">
         <label for="menü-ana" data-gnl="0 sağdan-1 24p">•••</label>
-        <label for="menü-ana-çapraz" data-gnl="0 sağdan-1 24p">///</label>
+        <label for="menü-ana-çapraz" data-gnl="0 sağdan-1 24p gizle">✕</label>
       </header>
-      {{ content }}
+      <div data-gnl="23 24p soldan-1 24p-aralık ortada">
+        <div data-gnl="1 1p dürmeden" style="margin-left:-40px;">
+          {{ content }}
+        </div>
+      </div>
     </div>
     <footer data-gnl="0 soldan-1 24p-aralık" style="position:absolute; bottom:0; z-index:999;">
       {% include sosero/footer.html %}
