--- a/_layouts/sosero/urunler.html
+++ b/_layouts/sosero/urunler.html
@@ -9,6 +9,7 @@
     <div class="main" data-gnl="1g 1nc ortada sığdır">
       <header data-gnl="23 24p soldan-1 24p-aralık üstte">
         <a  data-gnl="1 3p" data-kçk="0" href="#"><img src="/temalar/sosero/assets/img/sosero.png" alt="SOSERO"></a>
+        <h1 class="product-name" data-gnl="1 3p üstte-ol" style="margin-left:40px;">ÜRÜNLER</h1>
         <input id="menü-ana-çapraz" checked="" name="ana-menü" data-kapaç="sağda çaprazlama" type="radio">
         <label for="menü-ana" data-gnl="0 sağdan-1 24p">•••</label>
         <label for="menü-ana-çapraz" data-gnl="0 sağdan-1 24p">///</label>
