--- a/_includes/sosero/footer.html
+++ b/_includes/sosero/footer.html
@@ -49,6 +49,13 @@
     // instead of a settings object
   ]
 });
+$('.yemek').slick({
+dots: true,
+infinite: false,
+speed: 300,
+slidesToShow: 1,
+slidesToScroll: 1
+});
 
    });
 </script>
