--- a/_includes/sosero/footer.html
+++ b/_includes/sosero/footer.html
@@ -49,7 +49,7 @@
     // instead of a settings object
   ]
 });
-$('.yemek').slick({
+$('.regular2').slick({
 dots: true,
 infinite: false,
 speed: 300,
