--- a/_includes/sosero/footer.html
+++ b/_includes/sosero/footer.html
@@ -1,9 +1,8 @@
 <nav data-gnl="altta-ol">
   <ul data-menü="basit yatay">
-    <li><a href="#">Fac</a></li>
-    <li><a href="#">Twi</a></li>
-    <li><a href="#">Ins</a></li>
-    <li><a href="#">Goo</a></li>
+    <li><a href="#"><img src="/temalar/sosero/assets/img/sosyal/fb.svg" alt=""></a></li>
+    <li><a href="#"><img src="/temalar/sosero/assets/img/sosyal/ig.svg" alt=""></a></li>
+    <li><a href="#"><img src="/temalar/sosero/assets/img/sosyal/tt.svg" alt=""></a></li>
   </ul>
 </nav>
 
