--- a/_includes/sosero/menu.html
+++ b/_includes/sosero/menu.html
@@ -4,7 +4,14 @@
     <label for="menü-ana">•••</label>
     <label for="menü-ana-çapraz">✕</label>
     <ul data-menü="dikey sağ-kaval" data-gnl="solda" data-kçk="sağda">
-      <li data-gnl="1 1p sağda" data-kçk="gizle"><label for="menü-ana-çapraz">✕</label></li>
+      <li data-gnl="1 1p sağda" data-kçk="gizle">
+        <a class="baş" data-gnl="0 üstte-ol" style="padding:0 10px;" href="#">
+          <img style="width:100px; height:auto;" src="/temalar/sosero/assets/img/sosero.png" alt="SOSERO">
+        </a>
+        <label for="menü-ana-çapraz" data-gnl="0 sağdan-1 24p"  onclick="document.body.classList.remove('gelgit-etkin');">
+          <img src="/temalar/sosero/assets/img/menu/hamburger-x.svg" alt="">
+        </label>
+      </li>
       <li><a href="index02.html"><img src="/temalar/sosero/assets/img/menu/urunler.svg" alt=""><span>Ürünler</span></a></li>
       <li><a href="index03.html"><img src="/temalar/sosero/assets/img/menu/yemektarifleri.svg" alt=""><span>Yemek Tarifleri</span></a></li>
       <li><a href="index04.html"><img src="/temalar/sosero/assets/img/menu/uretimtesisleri.svg" alt=""><span>Üretim Tesisleri</span></a></li>
