--- a/_layouts/sosero/paketler.html
+++ b/_layouts/sosero/paketler.html
@@ -9,9 +9,7 @@
     <div class="main paketler" data-gnl="1g 1nc ortada sığdır" data-kçk="">
       <header data-gnl="23 24p soldan-1 24p-aralık üstte">
         <a  data-gnl="1 3p" data-kçk="0" href="#"><img src="/temalar/sosero/assets/img/sosero.png" alt="SOSERO"></a>
-        <input id="menü-ana-çapraz" checked="" name="ana-menü" data-kapaç="sağda çaprazlama" type="radio">
-        <label for="menü-ana" data-gnl="0 sağdan-1 24p">•••</label>
-        <label for="menü-ana-çapraz" data-gnl="0 sağdan-1 24p gizle">✕</label>
+        {% include sosero/hamburger-capraz.html %}
       </header>
       <div data-gnl="23 24p soldan-1 24p-aralık ortada">
         <div data-gnl="1 1p dürmeden" style="margin-left:-40px;">
