--- a/_layouts/sosero/urunler.html
+++ b/_layouts/sosero/urunler.html
@@ -7,13 +7,13 @@
   <div data-gnl="1 1p" data-kçk="sığdır">
     {% include sosero/menu.html %}
     <div class="main" data-gnl="1g 1nc ortada sığdır">
-      <header data-gnl="23 24p soldan-1 24p-aralık üstte">
+      <header data-gnl="23 24p üstte" style="padding:0 20px;">
         <a  data-gnl="1 3p" data-kçk="0" href="#"><img src="/temalar/sosero/assets/img/sosero.png" alt="SOSERO"></a>
-        <h1 class="product-name" data-gnl="1 3p üstte-ol" style="margin-left:40px;">ÜRÜNLER</h1>
+        <h1 class="product-name" data-gnl="1 3p üstte-ol" data-ort="küçükleri-gizle" style="margin-left:40px;">ÜRÜNLER</h1>
         {% include sosero/hamburger-capraz.html %}
       </header>
-      <div data-gnl="23 24p soldan-1 24p-aralık ortada göbekte">
-        <div data-gnl="1 1p dürmeden" style="margin-left:-40px;/* overflow-x:auto;-webkit-overflow-scrolling: touch; */">
+      <div data-gnl="23 24p ortada göbekte">
+        <div data-gnl="1 1p dürmeden">
           {{ content }}
         </div>
       </div>
