--- a/temalar/sosero/assets/css/sosero.css
+++ b/temalar/sosero/assets/css/sosero.css
@@ -590,7 +590,7 @@ article:nth-child(odd) .product-content-alt{
 {
     content:'';
     text-align: center;
-
+    transition: .3s ease;
     opacity: .25;
     color: black;
 
