--- a/_includes/sosero/menu.html
+++ b/_includes/sosero/menu.html
@@ -4,7 +4,7 @@
     <label for="menü-ana">•••</label>
     <label for="menü-ana-çapraz">✕</label>
     <ul data-menü="dikey sağ-kaval" data-gnl="solda" data-kçk="sağda">
-      <li data-gnl="1 1p sağda" data-kçk="gizle">
+      <li data-kçk="gizle">
         <a class="baş" data-gnl="0 üstte-ol" style="padding:0 10px;" href="#">
           <img style="width:100px; height:auto;" src="/temalar/sosero/assets/img/sosero.png" alt="SOSERO">
         </a>
