--- a/_layouts/sosero/harita.html
+++ b/_layouts/sosero/harita.html
@@ -5,7 +5,7 @@
 </head>
 <body data-gnl="sütun sığdır">
   <div data-gnl="1 1p" data-kçk="sığdır">
-    <header data-gnl="23 24p soldan-1 24p-aralık" data-kçk="0" style="position:absolute; z-index:999;">
+    <header data-gnl="23 24p" data-kçk="0" style="position:absolute; z-index:999;">
       <a  data-gnl="1 3p" data-kçk="0" href="#"><img src="/temalar/sosero/assets/img/sosero.png" alt="SOSERO"></a>
       {% include sosero/hamburger-capraz.html %}
     </header>
