--- a/_layouts/sosero/urun.html
+++ b/_layouts/sosero/urun.html
@@ -7,7 +7,7 @@
   <div data-gnl="1 1p" data-kçk="sığdır">
     {% include sosero/menu.html %}
     <div class="main" data-gnl="1g 1nc üstte ortada sığdır" data-kçk="kaymadan">
-      <header data-gnl="23 24p soldan-1 24p-aralık" data-kçk="1 1p" style="margin-bottom:30px;">
+      <header data-gnl="23 24p" data-kçk="1 1p" style="margin-bottom:30px;">
         <a  data-gnl="1 3p" data-kçk="0" href="#"><img src="/temalar/sosero/assets/img/sosero.png" alt="SOSERO"></a>
         <h1 class="product-name" data-gnl="1 3p üstte-ol">ÜRÜNLER</h1>
         {% include sosero/hamburger-capraz.html %}
