--- a/_layouts/sosero/urunler.html
+++ b/_layouts/sosero/urunler.html
@@ -7,8 +7,8 @@
   <div data-gnl="1 1p" data-kçk="sığdır">
     {% include sosero/menu.html %}
     <div class="main" data-gnl="1g 1nc ortada sığdır">
-      <header data-gnl="23 24p üstte" style="padding:0 20px;">
-        <a  data-gnl="1 3p" data-kçk="0" href="#"><img src="/temalar/sosero/assets/img/sosero.png" alt="SOSERO"></a>
+      <header data-gnl="23 24p üstte">
+        <a  data-gnl="1 3p" data-kçk="0" href="#"><img data-gnl="1 1p üstte-ol" src="/temalar/sosero/assets/img/sosero.png" alt="SOSERO"></a>
         <h1 class="product-name" data-gnl="1 3p üstte-ol" data-ort="küçükleri-gizle" style="margin-left:40px;">ÜRÜNLER</h1>
         {% include sosero/hamburger-capraz.html %}
       </header>
