--- a/_layouts/sosero/paketler.html
+++ b/_layouts/sosero/paketler.html
@@ -7,7 +7,7 @@
   <div data-gnl="1 1p" data-kçk="sığdır">
     {% include sosero/menu.html %}
     <div class="main paketler" data-gnl="1g 1nc ortada sığdır" data-kçk="">
-      <header data-gnl="23 24p soldan-1 24p-aralık üstte">
+      <header data-gnl="23 24p üstte">
         <a  data-gnl="1 3p" data-kçk="0" href="#"><img src="/temalar/sosero/assets/img/sosero.png" alt="SOSERO"></a>
         {% include sosero/hamburger-capraz.html %}
       </header>
