--- a/_includes/sosero/hamburger-capraz.html
+++ b/_includes/sosero/hamburger-capraz.html
@@ -1,7 +1,7 @@
 <input id="menü-ana-çapraz" checked="" name="ana-menü" data-kapaç="sağda çaprazlama" type="radio">
-<label for="menü-ana" data-gnl="0 sağdan-1 24p" onclick="document.body.classList.add('gelgit-etkin');">
+<label for="menü-ana" onclick="document.body.classList.add('gelgit-etkin');">
   <img src="/temalar/sosero/assets/img/menu/hamburger.svg" alt="">
 </label>
-<label for="menü-ana-çapraz" data-gnl="0 sağdan-1 24p">
+<label for="menü-ana-çapraz">
   <img src="/temalar/sosero/assets/img/menu/hamburger-x.svg" alt="">
 </label>
