--- a/_includes/sosero/menu.html
+++ b/_includes/sosero/menu.html
@@ -3,12 +3,12 @@
     <input id="menü-ana" name="ana-menü" data-kapaç="çaprazlama gizle" type="radio">
     <label for="menü-ana">•••</label>
     <label for="menü-ana-çapraz">✕</label>
-    <ul data-menü="dikey sağ-kaval" data-gnl="solda" data-kçk="sağda">
-      <li data-kçk="gizle">
+    <ul data-menü="dikey sağ-kaval">
+      <li data-kçk="gizle" style="margin-bottom:20px;">
         <a class="baş" data-gnl="0 üstte-ol" style="padding:0 10px;" href="#">
           <img style="width:100px; height:auto;" src="/temalar/sosero/assets/img/sosero.png" alt="SOSERO">
         </a>
-        <label for="menü-ana-çapraz" data-gnl="0 sağdan-1 24p"  onclick="document.body.classList.remove('gelgit-etkin');">
+        <label for="menü-ana-çapraz" onclick="document.body.classList.remove('gelgit-etkin');">
           <img src="/temalar/sosero/assets/img/menu/hamburger-x.svg" alt="">
         </label>
       </li>
