--- a/_layouts/sosero/giri.html
+++ b/_layouts/sosero/giri.html
@@ -6,7 +6,7 @@
 <body data-gnl="sütun sığdır">
   <div data-gnl="1 1p ortada sığdır">
     <header data-gnl="0 ortada" style="position:absolute; z-index:999;">
-      <a  data-gnl="4 6p" data-kçk="0" href="#"><img src="/temalar/sosero/assets/img/sosero.png" alt="SOSERO"></a>
+      <a class="logo" href="#"><img src="/temalar/sosero/assets/img/sosero.png" alt="SOSERO"></a>
       {% include sosero/hamburger-capraz.html %}
     </header>
     <div class="main" data-gnl="1g 1nc ortada sığdır" data-kçk="kaymadan">
