--- a/_layouts/sosero/harita.html
+++ b/_layouts/sosero/harita.html
@@ -4,16 +4,16 @@
 {% include sosero/head.html %}
 </head>
 <body data-gnl="sütun sığdır">
-  <div data-gnl="1 1p" data-kçk="sığdır">
-    <header data-gnl="23 24p" data-kçk="0" style="position:absolute; z-index:999;">
-      <a  data-gnl="1 3p" data-kçk="0" href="#"><img src="/temalar/sosero/assets/img/sosero.png" alt="SOSERO"></a>
+  <div data-gnl="1 1p sığdır">
+    <header data-gnl="23 24p" style="position:absolute; z-index:999;">
+      <a class="logo" href="#"><img src="/temalar/sosero/assets/img/sosero.png" alt="SOSERO"></a>
       {% include sosero/hamburger-capraz.html %}
     </header>
     {% include sosero/menu.html %}
     <div class="main" data-gnl="1g 1nc ortada sığdır" data-kçk="kaymadan dürmeden">
       {{ content }}
     </div>
-    <footer data-gnl="0 soldan-1 24p-aralık" style="position:absolute; bottom:0; z-index:999;">
+    <footer data-gnl="23 24p" style="position:absolute; bottom:0; z-index:999;">
       {% include sosero/footer.html %}
     </footer>
   </div>
