--- a/_layouts/sosero/haber.html
+++ b/_layouts/sosero/haber.html
@@ -8,13 +8,13 @@
     {% include sosero/menu.html %}
     <div class="main" data-gnl="1g 1nc ortada sığdır" data-kçk="kaymadan">
       <header data-gnl="23 24p soldan-1 24p-aralık üstte" data-kçk="1 1p" style="margin-bottom:30px;">
-        <a  data-gnl="4 6p" data-kçk="0" href="#"><img src="/temalar/sosero/assets/img/sosero.png" alt="SOSERO"></a>
+        <a class="logo" href="#"><img src="/temalar/sosero/assets/img/sosero.png" alt="SOSERO"></a>
         <h1 class="product-name" data-gnl="1 3p üstte-ol">HABERLER</h1>
         {% include sosero/hamburger-capraz.html %}
       </header>
       {{ content }}
     </div>
-    <footer data-gnl="0 soldan-1 24p-aralık" style="position:absolute; bottom:0; z-index:999;">
+    <footer data-gnl="23 24p">
       {% include sosero/footer.html %}
     </footer>
   </div>
