--- a/_layouts/sosero/paketler.html
+++ b/_layouts/sosero/paketler.html
@@ -8,7 +8,7 @@
     {% include sosero/menu.html %}
     <div class="main paketler" data-gnl="1g 1nc ortada sığdır" data-kçk="">
       <header data-gnl="23 24p üstte">
-        <a  data-gnl="1 3p" data-kçk="0" href="#"><img src="/temalar/sosero/assets/img/sosero.png" alt="SOSERO"></a>
+        <a class="logo" href="#"><img src="/temalar/sosero/assets/img/sosero.png" alt="SOSERO"></a>
         {% include sosero/hamburger-capraz.html %}
       </header>
       <div data-gnl="23 24p soldan-1 24p-aralık ortada">
@@ -17,7 +17,7 @@
         </div>
       </div>
     </div>
-    <footer data-gnl="0 soldan-1 24p-aralık" style="position:absolute; bottom:0; z-index:999;">
+    <footer data-gnl="23 24p">
       {% include sosero/footer.html %}
     </footer>
   </div>
