--- a/_layouts/sosero/urunler.html
+++ b/_layouts/sosero/urunler.html
@@ -8,7 +8,7 @@
     {% include sosero/menu.html %}
     <div class="main" data-gnl="1g 1nc ortada sığdır">
       <header data-gnl="23 24p üstte">
-        <a  data-gnl="1 3p" data-kçk="0" href="#"><img data-gnl="1 1p üstte-ol" src="/temalar/sosero/assets/img/sosero.png" alt="SOSERO"></a>
+        <a class="logo" href="#"><img src="/temalar/sosero/assets/img/sosero.png" alt="SOSERO"></a>
         <h1 class="product-name" data-gnl="1 3p üstte-ol" data-ort="küçükleri-gizle" style="margin-left:40px;">ÜRÜNLER</h1>
         {% include sosero/hamburger-capraz.html %}
       </header>
@@ -18,7 +18,7 @@
         </div>
       </div>
     </div>
-    <footer data-gnl="0 soldan-1 24p-aralık" style="position:absolute; bottom:0; z-index:999;">
+    <footer data-gnl="23 24p">
       {% include sosero/footer.html %}
     </footer>
   </div>
