--- a/_includes/sosero/hamburger-capraz.html
+++ b/_includes/sosero/hamburger-capraz.html
@@ -1,5 +1,5 @@
 <input id="menü-ana-çapraz" checked="" name="ana-menü" data-kapaç="sağda çaprazlama" type="radio">
-<label for="menü-ana" onclick="document.body.classList.add('gelgit-etkin');">
+<label for="menü-ana" onclick="document.body.classList.add('gelgit-etkin');" style="height:41px; width:41px;">
   <img src="/temalar/sosero/assets/img/menu/hamburger.svg" alt="">
 </label>
 <label for="menü-ana-çapraz">
