--- a/_includes/sosero/menu.html
+++ b/_includes/sosero/menu.html
@@ -4,7 +4,7 @@
     <label for="menü-ana">•••</label>
     <label for="menü-ana-çapraz">✕</label>
     <ul data-menü="dikey sağ-kaval">
-      <li data-kçk="gizle" style="margin-bottom:20px;">
+      <li data-byk="gizle" style="margin-bottom:20px;">
         <a class="baş" data-gnl="0 üstte-ol" style="padding:0 10px;" href="#">
           <img style="width:100px; height:auto;" src="/temalar/sosero/assets/img/sosero.png" alt="SOSERO">
         </a>
@@ -12,14 +12,14 @@
           <img src="/temalar/sosero/assets/img/menu/hamburger-x.svg" alt="">
         </label>
       </li>
-      <li><a href="index02.html"><img src="/temalar/sosero/assets/img/menu/urunler.svg" alt=""><span>Ürünler</span></a></li>
-      <li><a href="index03.html"><img src="/temalar/sosero/assets/img/menu/yemektarifleri.svg" alt=""><span>Yemek Tarifleri</span></a></li>
-      <li><a href="index04.html"><img src="/temalar/sosero/assets/img/menu/uretimtesisleri.svg" alt=""><span>Üretim Tesisleri</span></a></li>
-      <li><a href="index05.html"><img src="/temalar/sosero/assets/img/menu/katalog.svg" alt=""><span>Katalog</span></a></li>
-      <li><a href="index06.html"><img src="/temalar/sosero/assets/img/menu/satisnoktalari.svg" alt=""><span>Satış Noktaları</span></a></li>
-      <li><a href="index07.html"><img src="/temalar/sosero/assets/img/menu/haberler.svg" alt=""><span>Haberler</span></a></li>
-      <li><a href="index08.html"><img src="/temalar/sosero/assets/img/menu/hakkimizda.svg" alt=""><span>Hakkımızda</span></a></li>
-      <li><a href="index09.html"><img src="/temalar/sosero/assets/img/menu/iletisim.svg" alt=""><span>İletişim</span></a></li>
+      <li><a href="urunler.html"><img src="/temalar/sosero/assets/img/menu/urunler.svg" alt=""><span>Ürünler</span></a></li>
+      <li><a href="tarifler.html"><img src="/temalar/sosero/assets/img/menu/yemektarifleri.svg" alt=""><span>Yemek Tarifleri</span></a></li>
+      <li><a href="tesisler.html"><img src="/temalar/sosero/assets/img/menu/uretimtesisleri.svg" alt=""><span>Üretim Tesisleri</span></a></li>
+      <li><a href="katalog.html"><img src="/temalar/sosero/assets/img/menu/katalog.svg" alt=""><span>Katalog</span></a></li>
+      <li><a href="satisnoktalari.html"><img src="/temalar/sosero/assets/img/menu/satisnoktalari.svg" alt=""><span>Satış Noktaları</span></a></li>
+      <li><a href="haberler.html"><img src="/temalar/sosero/assets/img/menu/haberler.svg" alt=""><span>Haberler</span></a></li>
+      <li><a href="hakkimizda.html"><img src="/temalar/sosero/assets/img/menu/hakkimizda.svg" alt=""><span>Hakkımızda</span></a></li>
+      <li><a href="iletisim.html"><img src="/temalar/sosero/assets/img/menu/iletisim.svg" alt=""><span>İletişim</span></a></li>
     </ul>
   </nav>
 </div>
