--- a/_layouts/sosero/harita.html
+++ b/_layouts/sosero/harita.html
@@ -10,7 +10,7 @@
       {% include sosero/hamburger-capraz.html %}
     </header>
     {% include sosero/menu.html %}
-    <div class="main" data-gnl="1g 1nc ortada sığdır" data-kçk="kaymadan dürmeden">
+    <div class="main" data-gnl="1g 1nc ortada sığdır" data-byk="kaymadan dürmeden">
       {{ content }}
     </div>
     <footer data-gnl="23 24p" style="position:absolute; bottom:0; z-index:999;">
