--- a/_layouts/sosero/urunler.html
+++ b/_layouts/sosero/urunler.html
@@ -4,7 +4,7 @@
 {% include sosero/head.html %}
 </head>
 <body data-gnl="sütun sığdır">
-  <div data-gnl="1 1p" data-kçk="sığdır">
+  <div data-gnl="1 1p" data-byk="sığdır">
     {% include sosero/menu.html %}
     <div class="main" data-gnl="1g 1nc ortada sığdır">
       <header data-gnl="23 24p üstte">
