--- a/_layouts/sosero/haberler.html
+++ b/_layouts/sosero/haberler.html
@@ -4,10 +4,10 @@
 {% include sosero/head.html %}
 </head>
 <body data-gnl="sütun sığdır">
-  <div data-gnl="1 1p" data-kçk="sığdır">
+  <div data-gnl="1 1p" data-byk="sığdır">
     {% include sosero/menu.html %}
-    <div class="main" data-gnl="1g 1nc ortada sığdır" data-kçk="kaymadan">
-      <header data-gnl="23 24p üstte" data-kçk="1 1p" style="margin-bottom:30px;">
+    <div class="main" data-gnl="1g 1nc ortada sığdır" data-byk="kaymadan">
+      <header data-gnl="23 24p üstte" data-byk="1 1p" style="margin-bottom:30px;">
         <a class="logo" href="#"><img src="/temalar/sosero/assets/img/sosero.png" alt="SOSERO"></a>
         <h1 class="product-name" data-gnl="1 3p üstte-ol">HABERLER</h1>
         {% include sosero/hamburger-capraz.html %}
