--- a/_layouts/sosero/icerik.html
+++ b/_layouts/sosero/icerik.html
@@ -5,12 +5,12 @@
 </head>
 <body data-gnl="sütun sığdır">
   <div data-gnl="1 1p" data-kçk="sığdır">
-    <header data-gnl="23 24p" data-kçk="0" style="position:absolute; z-index:999;">
+    <header data-gnl="23 24p" data-byk="0" style="position:absolute; z-index:999;">
       <a class="logo" href="#"><img src="/temalar/sosero/assets/img/sosero.png" alt="SOSERO"></a>
       {% include sosero/hamburger-capraz.html %}
     </header>
     {% include sosero/menu.html %}
-    <div class="main" data-gnl="1g 1nc ortada sığdır" data-kçk="kaymadan dürmeden">
+    <div class="main" data-gnl="1g 1nc ortada sığdır" data-byk="kaymadan dürmeden">
       {{ content }}
     </div>
     <footer data-gnl="23 24p">
