--- a/_layouts/sosero/urunler.html
+++ b/_layouts/sosero/urunler.html
@@ -18,7 +18,7 @@
         </div>
       </div>
     </div>
-    <footer data-gnl="23 24p">
+    <footer data-gnl="0">
       {% include sosero/footer.html %}
     </footer>
   </div>
