--- a/_layouts/sosero/icerik.html
+++ b/_layouts/sosero/icerik.html
@@ -13,7 +13,7 @@
     <div class="main" data-gnl="1g 1nc ortada sığdır" data-byk="kaymadan dürmeden">
       {{ content }}
     </div>
-    <footer data-gnl="23 24p">
+    <footer data-gnl="0">
       {% include sosero/footer.html %}
     </footer>
   </div>
