--- a/_layouts/sosero/urun.html
+++ b/_layouts/sosero/urun.html
@@ -14,7 +14,7 @@
       </header>
       {{ content }}
     </div>
-    <footer data-gnl="23 24p">
+    <footer data-gnl="0">
       {% include sosero/footer.html %}
     </footer>
   </div>
